// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration tests render server and client 1`] = `"<div><div>Hello<div><div>World</div></div></div><div>Goodbye</div><div>Oh noes!</div></div>"`;

exports[`integration tests render server and client 2`] = `
Object {
  "jobs": Object {
    "1": Object {
      "data": "Hello",
    },
    "2": Object {
      "data": "World",
    },
    "3": Object {
      "data": "Goodbye",
    },
    "4": Object {
      "error": Object {
        "message": "Oh noes!",
        "stack": "Error: Oh noes!
    at work (/Users/joaol/code/react-jobs/src/__tests__/integration.test.js:33:53)
    at ComponentWithJob.resolveWork.props [as resolveWork] (/Users/joaol/code/react-jobs/src/withJob.js:196:580)
    at ComponentWithJob.asyncBootstrap (/Users/joaol/code/react-jobs/src/withJob.js:65:54)
    at visitor (/Users/joaol/code/react-jobs/node_modules/react-async-bootstrapper/commonjs/index.js:17:23)
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:163:12
    at new Promise (<anonymous>)
    at reactTreeWalker (/Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:70:10)
    at mapper (/Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:88:29)
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:52:28
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:38:14
    at <anonymous>",
      },
    },
  },
}
`;

exports[`integration tests render server and client 3`] = `
<JobProvider
  jobContext={null}
  rehydrateState={
    Object {
      "jobs": Object {},
    }
  }
>
  <div>
    <WithJob(ResultRenderer)>
      <ResultRenderer
        jobResult="Hello"
      >
        <div>
          Hello
          <div>
            <WithJob(ResultRenderer)>
              <ResultRenderer
                jobResult="World"
              >
                <div>
                  World
                </div>
              </ResultRenderer>
            </WithJob(ResultRenderer)>
          </div>
        </div>
      </ResultRenderer>
    </WithJob(ResultRenderer)>
    <WithJob(ResultRenderer)>
      <ResultRenderer
        jobResult="Goodbye"
      >
        <div>
          Goodbye
        </div>
      </ResultRenderer>
    </WithJob(ResultRenderer)>
    <WithJob(ResultRenderer)>
      <ErrorComponent
        error={
          Object {
            "message": "Oh noes!",
            "stack": "Error: Oh noes!
    at work (/Users/joaol/code/react-jobs/src/__tests__/integration.test.js:33:53)
    at ComponentWithJob.resolveWork.props [as resolveWork] (/Users/joaol/code/react-jobs/src/withJob.js:196:580)
    at ComponentWithJob.asyncBootstrap (/Users/joaol/code/react-jobs/src/withJob.js:65:54)
    at visitor (/Users/joaol/code/react-jobs/node_modules/react-async-bootstrapper/commonjs/index.js:17:23)
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:163:12
    at new Promise (<anonymous>)
    at reactTreeWalker (/Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:70:10)
    at mapper (/Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:88:29)
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:52:28
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:38:14
    at <anonymous>",
          }
        }
      >
        <div>
          Oh noes!
        </div>
      </ErrorComponent>
    </WithJob(ResultRenderer)>
  </div>
</JobProvider>
`;

exports[`integration tests render server and client 4`] = `
<JobProvider
  jobContext={null}
  rehydrateState={
    Object {
      "jobs": Object {},
    }
  }
>
  <div>
    <WithJob(ResultRenderer)>
      <ResultRenderer
        jobResult="Hello"
      >
        <div>
          Hello
          <div>
            <WithJob(ResultRenderer)>
              <ResultRenderer
                jobResult="World"
              >
                <div>
                  World
                </div>
              </ResultRenderer>
            </WithJob(ResultRenderer)>
          </div>
        </div>
      </ResultRenderer>
    </WithJob(ResultRenderer)>
    <WithJob(ResultRenderer)>
      <ResultRenderer
        jobResult="Goodbye"
      >
        <div>
          Goodbye
        </div>
      </ResultRenderer>
    </WithJob(ResultRenderer)>
    <WithJob(ResultRenderer)>
      <ErrorComponent
        error={
          Object {
            "message": "Oh noes!",
            "stack": "Error: Oh noes!
    at work (/Users/joaol/code/react-jobs/src/__tests__/integration.test.js:33:53)
    at ComponentWithJob.resolveWork.props [as resolveWork] (/Users/joaol/code/react-jobs/src/withJob.js:196:580)
    at ComponentWithJob.asyncBootstrap (/Users/joaol/code/react-jobs/src/withJob.js:65:54)
    at visitor (/Users/joaol/code/react-jobs/node_modules/react-async-bootstrapper/commonjs/index.js:17:23)
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:163:12
    at new Promise (<anonymous>)
    at reactTreeWalker (/Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:70:10)
    at mapper (/Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:88:29)
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:52:28
    at /Users/joaol/code/react-jobs/node_modules/react-tree-walker/commonjs/index.js:38:14
    at <anonymous>",
          }
        }
      >
        <div>
          Oh noes!
        </div>
      </ErrorComponent>
    </WithJob(ResultRenderer)>
  </div>
</JobProvider>
`;
